chore: fix ui table form

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,3 +4,14 @@
   --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+html, body {
+  transform: scale(1);
+}
+
+html {
+  zoom: 1;
+}
+
+
+
